# baozi

./: .coverage  .gitignore  CHANGELOG.md  README.md  makefile  pyproject.toml  setup.py  test.py
baozi/: .gitignore  __init__.py  baozi.py  error.py  frozen.py  slots.py  typecast.py
src/: __init__.py  domino.py  error.py  frozen.py  slots.py  test.py  typecast.py  utils.py
src/.ipynb_checkpoints/: domino-checkpoint.py
tests/: test.py  test_baozi.py  test_domino.py  test_event.py  test_performance.py
