[tool.poetry]
name = "baozi"
version = "0.0.6"
description = ""
authors = ["race <raceychan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pydantic = "^2.5.3"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
